--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="public/site.css" />
   </head>
   <body>
-    <p>This is the body.</p>
+    <p id="description"></p>
+    <div id="sites"></div>
     <script src="public/site.js"></script>
   </body>
 </html>
