--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
   <body>
     <p id="description"></p>
     <div id="sites"></div>
-    <script src="public/site.js"></script>
+    <script type="module" src="public/site.js"></script>
   </body>
 </html>
