--- a/index.html
+++ b/index.html
@@ -1,16 +1,59 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+      crossorigin="anonymous"
+    />
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
     <link rel="stylesheet" href="public/site.css" />
   </head>
-  <body>
-    <p id="description"></p>
+  <body class="p-0">
+    <div class="header">
+      <div class="action-bar">
+        <div class="left">
+          <div class="header-logo">
+            <image
+              src="./public/quarto-logo-white.png"
+              alt="quarto.pub logo"
+              width="32"
+              height="32"
+            />
+            <div class="header-logo-title">quarto.pub</div>
+          </div>
+        </div>
+        <div class="center">
+          <div id="name" class="name"></div>
+        </div>
+        <div class="right"></div>
+      </div>
+      <image class="arc" src="./public/arc-less.png" alt="quarto.pub logo" />
+    </div>
+    <p id="description mt-5" class="mt-8"></p>
     <div id="sites"></div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+      crossorigin="anonymous"
+    ></script>
+
+    <script id="rocks-template" type="text/x-handlebars-template">
+      <b>{{doesWhat}}</b>
+    </script>
+
     <script type="module" src="public/site.js"></script>
   </body>
 </html>
