--- a/index.html
+++ b/index.html
@@ -4,10 +4,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
-      rel="stylesheet"
-    />
-    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
@@ -24,18 +20,20 @@
   <body class="p-0">
     <div class="header">
       <div class="action-bar">
-        <div class="left">
-          <div class="header-logo">
-            <image
-              src="./public/quarto-logo-white.png"
-              alt="quarto.pub logo"
-              width="32"
-              height="32"
-            />
-            <div class="header-logo-title">quarto.pub</div>
+        <div class="d-flex justify-content-left">
+          <div id="header-logo" class="header-logo">
+            <a class="quarto-pub-logo" href="https://quartopub.org">
+              <image
+                src="./public/quarto-logo-white.png"
+                alt="quarto.pub logo"
+                width="32"
+                height="32"
+              />
+              <div class="header-logo-title">quarto.pub</div>
+            </a>
           </div>
         </div>
-        <div class="center">
+        <div class="d-flex justify-content-center">
           <div id="name" class="name"></div>
         </div>
         <div class="right"></div>
@@ -43,6 +41,13 @@
       <image class="arc" src="./public/arc-less.png" alt="quarto.pub logo" />
     </div>
     <p id="description mt-5" class="mt-8"></p>
+
+    <div class="container">
+      <div
+        id="sites"
+        class="row row-cols-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-3"
+      ></div>
+    </div>
     <div id="sites"></div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
@@ -52,6 +57,24 @@
 
     <script id="rocks-template" type="text/x-handlebars-template">
       <b>{{doesWhat}}</b>
+    </script>
+
+    <script id="site-template" type="text/x-handlebars-template">
+      <div class="site">
+        <a href="{{site_url}}">
+          <img class="site-screenshot" src="{{screenshot_url}}" />
+        </a>
+        <div class="site-info container mb-4">
+          <div class="row mt-2">
+            <div
+              class="col site-title left p-0 d-flex justify-content-start"
+            >{{title}}</div>
+            <div
+              class="col site-type right p-0 d-flex justify-content-end"
+            >{{type}}</div>
+          </div>
+        </div>
+      </div>
     </script>
 
     <script type="module" src="public/site.js"></script>
