--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -15,49 +13,55 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
-    <link rel="stylesheet" href="public/site.css" />
+    <link rel="stylesheet" href="public/app.css" />
   </head>
-  <body class="p-0">
-    <div class="header">
-      <div class="action-bar">
-        <div class="d-flex justify-content-left">
-          <div id="header-logo" class="header-logo">
-            <a class="quarto-pub-logo" href="https://quartopub.org">
-              <image
-                src="./public/quarto-logo-white.png"
-                alt="quarto.pub logo"
-                width="32"
-                height="32"
-              />
-              <div class="header-logo-title">quarto.pub</div>
-            </a>
-          </div>
-        </div>
-        <div class="d-flex justify-content-center">
-          <div id="name" class="name"></div>
-        </div>
-        <div class="right"></div>
-      </div>
-      <image class="arc" src="./public/arc-less.png" alt="quarto.pub logo" />
-    </div>
-    <p id="description mt-5" class="mt-8"></p>
-
-    <div class="p-3">
-      <div id="sites" class=""></div>
-    </div>
-
-    <div id="sites"></div>
-
+  <body ontouchstart="">
+    <div id="loading-spinner"></div>
+    <div id="application"></div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
       crossorigin="anonymous"
     ></script>
-
-    <script id="rocks-template" type="text/x-handlebars-template">
-      <b>{{doesWhat}}</b>
+    <script id="header-template" type="text/x-handlebars-template">
+      <div id="header">
+        <div id="action-bar">
+          <div id="action-bar-logo">
+            <a id="quarto-pub-logo" href="https://quartopub.org">
+              <img
+                id="quarto-pub-logo-icon"
+                src="./public/quarto-logo-white.png"
+                alt="quarto.pub logo"
+              />
+              <div id="quarto-pub-logo-title">quarto.pub</div>
+            </a>
+          </div>
+          <div id="action-bar-name">{{subdomain}}</div>
+        </div>
+        <img id="arc" src="./public/arc-less.png" alt="quarto.pub logo" />
+      </div>
+      <div id="sss">Hello</div>
     </script>
-
+    <script id="display-options-template" type="text/x-handlebars-template">
+      <div id="display-options">
+        <div class="list-grid-control-container">
+          <div id="list-grid-control" class="list-grid-control">
+            <div class="list-grid-control-list">&nbsp;
+            </div>
+            <div class="list-grid-control-grid">&nbsp;
+            </div>
+            <div
+              id="list-grid-control-indicator"
+              class="list-grid-control-indicator"
+            ></div>
+          </div>
+        </div>
+      </div>
+    </script>
+    <script id="sites-template" type="text/x-handlebars-template">
+      <div id="sites">
+      </div>
+    </script>
     <script id="site-template" type="text/x-handlebars-template">
       <div class="site">
         <a href="{{site_url}}">
@@ -73,13 +77,12 @@
             >{{type}}</div>
           </div>
         </div>
-        <div class="site-yaya">
+        <div class="site-updated">
           <span>Last updated:</span>
-          <span class="moment">1 day ago</span>
+          <span class="site-updated-time">1 day ago</span>
         </div>
       </div>
     </script>
-
-    <script type="module" src="public/site.js"></script>
+    <script type="module" src="public/app.js"></script>
   </body>
 </html>
