--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
             <div class="list-grid-control-grid">&nbsp;
             </div>
             <div
-              id="list-grid-control-indicator"
-              class="list-grid-control-indicator"
+              class="list-grid-control-indicator list-grid-control-indicator-right"
             ></div>
           </div>
         </div>
