Make list / grid accessible

--- a/index.html
+++ b/index.html
@@ -45,7 +45,13 @@
     <script id="display-options-template" type="text/x-handlebars-template">
       <div id="display-options">
         <div class="list-grid-control-container">
-          <div id="list-grid-control" class="list-grid-control">
+          <div
+            id="list-grid-control"
+            class="list-grid-control"
+            role="button"
+            tabindex="0"
+            aria-pressed="true"
+          >
             <div class="list-grid-control-list">&nbsp;
             </div>
             <div class="list-grid-control-grid">&nbsp;
