--- a/index.html
+++ b/index.html
@@ -40,29 +40,33 @@
     </script>
 
     <script id="display-options-template" type="text/x-handlebars-template">
-      <div id="display-options">
-        <div class="list-grid-control-container">
-          <div
-            id="list-grid-control"
-            class="list-grid-control"
-            role="button"
-            tabindex="0"
-            aria-pressed="true"
-          >
-            <div class="list-grid-control-list">&nbsp;
-            </div>
-            <div class="list-grid-control-grid">&nbsp;
-            </div>
+      <div id="display-options-container">
+        <div id="display-options">
+          <div class="list-grid-control-container">
             <div
-              class="list-grid-control-indicator list-grid-control-indicator-right"
-            ></div>
+              id="list-grid-control"
+              class="list-grid-control"
+              role="button"
+              tabindex="0"
+              aria-pressed="true"
+            >
+              <div class="list-grid-control-list">&nbsp;
+              </div>
+              <div class="list-grid-control-grid">&nbsp;
+              </div>
+              <div
+                class="list-grid-control-indicator list-grid-control-indicator-right"
+              ></div>
+            </div>
           </div>
         </div>
       </div>
     </script>
 
     <script id="sites-template" type="text/x-handlebars-template">
-      <div id="sites">
+      <div id="sites-container">
+        <div id="sites">
+        </div>
       </div>
     </script>
 
