--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <link rel="stylesheet" href="public/app.css" />
   </head>
   <body>
-    <!-- The Site -->
     <div id="loading-spinner"></div>
     <div id="application"></div>
 
@@ -88,7 +87,7 @@
         </div>
         <div class="site-updated">
           <span>Last updated</span>
-          <span class="site-updated-time">1 day ago</span>
+          <span class="site-updated-time">{{fdoo}}</span>
         </div>
       </div>
     </script>
