--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
       </div>
     </script>
 
-    <script id="sites-template" type="text/x-handlebars-template">
-      <div id="sites-container">
-        <div id="sites">
+    <script id="grid-sites-template" type="text/x-handlebars-template">
+      <div id="grid-sites-container">
+        <div id="grid-sites">
         </div>
       </div>
     </script>
@@ -87,7 +87,7 @@
         </div>
         <div class="site-updated">
           <span>Last updated</span>
-          <span class="site-updated-time">{{fdoo}}</span>
+          <span class="site-updated-time">{{last_updated}}</span>
         </div>
       </div>
     </script>
