--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
       </div>
     </script>
 
-    <script id="display-options-template" type="text/x-handlebars-template">
-      <div id="display-options-container">
-        <div id="display-options">
+    <script id="options-template" type="text/x-handlebars-template">
+      <div id="options-container">
+        <div id="options">
           <div class="list-grid-control-container">
             <div
               id="list-grid-control"
@@ -70,7 +70,7 @@
       </div>
     </script>
 
-    <script id="site-template" type="text/x-handlebars-template">
+    <script id="grid-site-template" type="text/x-handlebars-template">
       <div class="site">
         <a href="{{site_url}}">
           <img class="site-screenshot" src="{{screenshot_url}}" />
