Refactoring for sorting

--- a/index.html
+++ b/index.html
@@ -63,6 +63,22 @@
                 ></div>
               </div>
             </div>
+
+            <div class="sorting-control-container">
+              <div
+                id="sorting-control"
+                class="sorting-control"
+                role="button"
+                tabindex="1"
+                aria-pressed="true"
+              >
+                <div class="sorting-control-ascending">&nbsp;</div>
+                <div class="sorting-control-descending">&nbsp;</div>
+                <div
+                  class="sorting-control-indicator sorting-control-indicator-right"
+                ></div>
+              </div>
+            </div>
           </div>
         </div>
 
