Updates to layout, sorting

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Application -->
     <div id="application">
       <!-- Header -->
-      <div id="header">
+      <header id="header">
         <div id="action-bar">
           <div>
             <a id="quarto-pub-logo" href="https://quartopub.org">
@@ -37,14 +37,15 @@
           </div>
           <div id="action-bar-name"></div>
         </div>
-
         <!-- Bottom Arc -->
         <img
           id="bottom-arc"
           src="./public/arc-less.png"
           alt="quarto.pub logo"
         />
+      </header>
 
+      <main>
         <!-- Options -->
         <div id="options-container">
           <div id="options">
@@ -124,7 +125,9 @@
 
         <!-- Sites Grid  -->
         <div id="sites-grid-container">
-          <div id="sites-grid"></div>
+          <div id="sites-grid-yacko">
+            <div id="sites-grid"></div>
+          </div>
         </div>
 
         <!-- Sites List -->
@@ -137,7 +140,7 @@
           </div>
           <div id="sites-list"></div>
         </div>
-      </div>
+      </main>
     </div>
 
     <!-- Site Grid Entry Template -->
