Updates to layout, sorting

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                       id="button-sort-newest"
                       class="sorting-menu-item dropdown-item"
                     >
-                      <span class="sorting-title">Newest</span>
+                      <span class="sorting-menu-item-title">Newest</span>
                     </button>
                   </li>
                   <li>
@@ -96,7 +96,7 @@
                       id="button-sort-oldest"
                       class="sorting-menu-item dropdown-item"
                     >
-                      <span class="sorting-title">Oldest</span>
+                      <span class="sorting-menu-item-title">Oldest</span>
                     </button>
                   </li>
                   <li>
@@ -104,7 +104,7 @@
                       id="button-sort-title"
                       class="sorting-menu-item dropdown-item"
                     >
-                      <span class="sorting-title">Title</span>
+                      <span class="sorting-menu-item-title">Title</span>
                     </button>
                   </li>
                   <li>
@@ -112,7 +112,7 @@
                       id="button-sort-type"
                       class="sorting-menu-item dropdown-item"
                     >
-                      <span class="sorting-title">Type</span>
+                      <span class="sorting-menu-item-title">Type</span>
                     </button>
                   </li>
                 </ul>
@@ -125,7 +125,7 @@
 
         <!-- Sites Grid  -->
         <div id="sites-grid-container">
-          <div id="sites-grid-yacko">
+          <div id="sites-grid-wrapper">
             <div id="sites-grid"></div>
           </div>
         </div>
