--- a/index.html
+++ b/index.html
@@ -131,14 +131,14 @@
         </div>
 
         <!-- Sites List -->
-        <!--
-        <div id="sites-list-header">
-          <div></div>
-          <div>Title</div>
-          <div>Type</div>
-          <div>Last Updated</div>
+        <div id="sites-list-header-container">
+          <div id="sites-list-header">
+            <div></div>
+            <div>Title</div>
+            <div>Type</div>
+            <div>Last Updated</div>
+          </div>
         </div>
-        -->
         <div id="sites-list-container">
           <div id="sites-list-wrapper">
             <div id="sites-list"></div>
