--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <!-- Sites List -->
         <div id="sites-list-header-container">
           <div id="sites-list-header">
-            <div></div>
+            <div>Preview</div>
             <div>Title</div>
             <div>Type</div>
             <div>Last Updated</div>
