--- a/index.html
+++ b/index.html
@@ -128,6 +128,9 @@
           <div id="sites-grid-wrapper">
             <div id="sites-grid"></div>
           </div>
+          <footer style="width: 100%; height: 2rem; background: red">
+            Goi
+          </footer>
         </div>
 
         <!-- Sites List -->
@@ -139,10 +142,14 @@
             <div>Last Updated</div>
           </div>
         </div>
+
         <div id="sites-list-container">
           <div id="sites-list-wrapper">
             <div id="sites-list"></div>
           </div>
+          <footer style="width: 100%; height: 2rem; background: red">
+            Goi
+          </footer>
         </div>
       </main>
     </div>
