--- a/index.html
+++ b/index.html
@@ -197,6 +197,8 @@
             <a
               class="footer-legal-link"
               href="https://www.rstudio.com/"
+              target="_blank"
+              rel="noopener noreferrer"
             >RStudio, PBC.</a>
             All Rights Reserved.
 
@@ -204,10 +206,14 @@
           <a
             class="lefty-margin footer-legal-link"
             href="https://www.rstudio.com/about/rstudio-service-terms-of-use/"
+            target="_blank"
+            rel="noopener noreferrer"
           >Terms of Use</a>
           <a
             class="lefty-margin footer-legal-link"
             href="https://www.rstudio.com/about/privacy-policy/"
+            target="_blank"
+            rel="noopener noreferrer"
           >Privacy Policy</a>
         </div>
 
