List layout work

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
           </div>
           <div id="action-bar-name"></div>
         </div>
+
         <!-- Bottom Arc -->
         <img
           id="bottom-arc"
@@ -135,8 +136,8 @@
           <div id="sites-list-header">
             <div>Preview</div>
             <div>Title</div>
-            <div>Type</div>
-            <div style="text-align: right">Last Updated</div>
+            <div class="site-list-title-type">Type</div>
+            <div class="site-list-title-last-updated">Last Updated</div>
           </div>
         </div>
 
@@ -192,7 +193,8 @@
       <footer class="footer">
         <div class="footer-foo">
           <div>
-            Copyright ©
+            <span class="copyright-word">Copyright</span>
+            ©
             {{year}}
             <a
               class="footer-legal-link"
