--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
             ©
             {{year}}
             <a
-              class="footer-legal-link"
+              class="footer-link"
               href="https://www.rstudio.com/"
               target="_blank"
               rel="noopener noreferrer"
@@ -212,13 +212,13 @@
 
           </div>
           <a
-            class="lefty-margin footer-legal-link"
+            class="footer-link footer-legal-link"
             href="https://www.rstudio.com/about/rstudio-service-terms-of-use/"
             target="_blank"
             rel="noopener noreferrer"
           >Terms of Use</a>
           <a
-            class="lefty-margin footer-legal-link"
+            class="footer-link footer-legal-link"
             href="https://www.rstudio.com/about/privacy-policy/"
             target="_blank"
             rel="noopener noreferrer"
