Couple of final tweaks

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <div id="sites-list-header-container">
           <div id="sites-list-header">
             <div>Preview</div>
-            <div>Title</div>
+            <div class="site-list-title-title">Title</div>
             <div class="site-list-title-type">Type</div>
             <div class="site-list-title-last-updated">Last Updated</div>
           </div>
