Adding limit search param and favicons

--- a/index.html
+++ b/index.html
@@ -2,6 +2,35 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>quarto.pub</title>
+    <link
+      rel="icon"
+      type="image/png"
+      href="/public/quarto-blue-16-favicon.png"
+      sizes="16x16"
+      nonce=""
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      href="/public/quarto-blue-32-favicon.png"
+      sizes="32x32"
+      nonce=""
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      href="/public/quarto-blue-48-favicon.png"
+      sizes="48x48"
+      nonce=""
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      href="/public/quarto-blue-64-favicon.png"
+      sizes="64x64"
+      nonce=""
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
