Change to quartopub.com

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <header id="header">
         <div id="action-bar">
           <div>
-            <a id="quarto-pub-logo" href="https://quartopub.org">
+            <a id="quarto-pub-logo" href="https://quartopub.com">
               <img
                 id="quarto-pub-logo-icon"
                 src="./public/quarto-logo-white.png"
